[success] generate translated files, manually tested ✅

--- a/01_test.html
+++ b/01_test.html
@@ -5,6 +5,6 @@
   <title>Untitled Custom SSG</title>
 </head>
 <body>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sapien pellentesque habitant morbi tristique senectus et netus et malesuada. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. In cursus turpis massa tincidunt dui ut. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. In cursus turpis massa tincidunt dui ut ornare lectus. Sagittis aliquam malesuada bibendum arcu. Cras pulvinar mattis nunc sed blandit. Vitae et leo duis ut. Sem integer vitae justo eget magna fermentum iaculis eu. Enim eu turpis egestas pretium aenean pharetra. Viverra aliquet eget sit amet tellus cras adipiscing.
+  罗伯特·弗罗斯特（Robert Frost）的《火与冰》有人说世界将在火中终结，有人说在冰上。从我渴望的欲望中，我与那些喜欢火的人保持着联系。但是，如果它必须灭亡两次，我想我对仇恨的了解就足够多了。他说，对于破坏来说，冰也很棒而且就足够了。
 </body>
 </html>
